Bug 151667 - toolbar can be hidden but not shown.
Summary: toolbar can be hidden but not shown.
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.96.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Edwards
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-01 01:28 UTC by Grósz Dániel
Modified: 2008-02-19 18:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2007-11-01 01:28:02 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

Systemsettings does not have the toolbar in beta 4 which makes it impossible to return to Overview from a module.
Comment 1 Grósz Dániel 2007-11-03 21:06:39 UTC
I use openSUSE packages. I kept my .kde4 directory when I upgraded. If I delete it, the toolbar is there. However, there is a problem: if I right-click on the toolbar and hide it, I could find no way to show it.
Comment 2 Colin Stark 2008-01-18 19:56:02 UTC
I can confirm this bug. The toolbar is hidden in my system settings and I have no way of making it reappear.
Comment 3 Michael Jansen 2008-02-19 18:58:12 UTC
SVN commit 777081 by mjansen:

BUG: 151667

Prevent the toolbar from being hidden. Without a menubar there is no way to
get it back.



 M  +3 -3      mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=777081