BUG: 151667

Prevent the toolbar from being hidden. Without a menubar there is no way to
get it back.


svn path=/trunk/KDE/kdebase/workspace/; revision=777081